--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,48 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  font-size: 2.5em;
+}
+
+.app {
+  display: flex;
+  flex-direction: row;
+}
+
+.den {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.den img {
+  width: 75%;
+}
+
+.interaction-area {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 60%;
+}
+
+.interaction-area img {
+  width: 20em;
+}
+
+.activity {
+  width: 12em;
+  background-color: #e26d67;
+  margin: 0.2em;
+  padding: 0.5em;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.activity:hover {
+  background-color: #f57e77;
 }
